--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import "./bootstrap.min.css";
+
 main {
   min-height: 80vh;
 }
@@ -23,4 +25,10 @@ h1 {
 
 .custom-control {
   padding-left: 0;
+}
+
+@media only screen and (min-width: 1200px) {
+  .container {
+    max-width: 95%;
+  }
 }
