--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,6 +43,7 @@ h1 {
   border-top: 0;
   border-right: 0;
   border-left: 0;
+  background-color: #9e9e9e0f !important;
 }
 
 .product-card-block {
@@ -64,11 +65,6 @@ h1 {
   border: 0;
 }
 
-.color-picture-block {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-}
 .color-picture {
   display: inline-block;
   flex: 1 1 auto;
@@ -93,13 +89,34 @@ button.image-gallery-icon {
 }
 .image-gallery-right-nav,
 .image-gallery-left-nav {
-  transform: translateY(-50%) scale(0.6);
-  padding: 50px 0px;
+  transform: translateY(-50%) scale(0.5);
+  padding: 0;
+  background-color: rgb(0, 0, 0, 0.2);
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+.image-gallery-left-nav .image-gallery-svg,
+.image-gallery-right-nav .image-gallery-svg {
+  height: 100px;
+  width: 100px;
 }
 .image-gallery-fullscreen-button {
   padding: 3px;
+  top: 0;
+  left: 0;
+  bottom: auto;
 }
 
 .list-group-item p {
   margin-bottom: 0.5rem;
+}
+
+/* .image-gallery-content.left .image-gallery-slide .image-gallery-image,
+.image-gallery-content.right .image-gallery-slide .image-gallery-image {
+  max-height: 100%;
+} */
+
+.checkboxImg {
+  margin-top: -25px;
 }
