--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,6 +44,7 @@ h1 {
   border-right: 0;
   border-left: 0;
   background-color: #9e9e9e0f !important;
+  min-width: 85px;
 }
 
 .product-card-block {
@@ -68,10 +69,7 @@ h1 {
 .color-picture {
   display: inline-block;
   flex: 1 1 auto;
-}
-
-.form-control {
-  min-width: 85px;
+  margin-right: 5px;
 }
 
 .order-select {
