--- a/frontend/src/components/Promo/Promo.css
+++ b/frontend/src/components/Promo/Promo.css
@@ -1,3 +1,5 @@
+@import "/index.css";
+
 .promo-block {
   max-width: 100vw;
   display: grid;
@@ -5,70 +7,84 @@
   grid-auto-rows: minmax(100px, auto);
 }
 
-@media screen and (min-width: 877px) {
-  .promo-block {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  }
-  #promo-1 {
-    grid-column: 1 / 2;
-    grid-row: 1;
-  }
-  #promo-2 {
-    grid-column: 1 / 2;
-    grid-row: 2;
-  }
-  #promo-3 {
-    grid-column: 2 / 4;
-    grid-row: 1 / 3;
-  }
-  #promo-4 {
-    grid-column: 4 / 5;
-    grid-row: 1;
-  }
-  #promo-5 {
-    grid-column: 4 / 5;
-    grid-row: 2;
-  }
-  #promo-6 {
-    grid-column: 5 / 6;
-    grid-row: 1;
-  }
-  #promo-7 {
-    grid-column: 5 / 6;
-    grid-row: 2;
-  }
+.promo-block {
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  font-size: 0.8rem;
+}
+#promo-1 {
+  grid-column: 1 / 2;
+  grid-row: 1;
+}
+#promo-2 {
+  grid-column: 1 / 2;
+  grid-row: 2;
+}
+#promo-3 {
+  grid-column: 2 / 4;
+  grid-row: 1 / 3;
+}
+#promo-4 {
+  grid-column: 4 / 5;
+  grid-row: 1;
+}
+#promo-5 {
+  grid-column: 4 / 5;
+  grid-row: 2;
+}
+#promo-6 {
+  grid-column: 5 / 6;
+  grid-row: 1;
+}
+#promo-7 {
+  grid-column: 5 / 6;
+  grid-row: 2;
+}
+#promo-8 {
+  grid-column: 6;
+  grid-row: 1/3;
+}
+#promo-9 {
+  grid-column: 6;
+  grid-row: 2;
 }
 
-@media screen and (max-width: 876px) {
+@media screen and (max-width: 768px) {
   .promo-block {
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    font-size: 0.6rem;
   }
   #promo-1 {
     grid-column: 1 / 3;
     grid-row: 1 / 3;
   }
   #promo-2 {
-    grid-column: 1;
-    grid-row: 3;
+    display: none;
   }
   #promo-3 {
     grid-column: 3 / 5;
     grid-row: 2 / 4;
   }
   #promo-4 {
-    grid-column: 2;
-    grid-row: 3;
+    grid-column: 3;
+    grid-row: 1;
   }
   #promo-5 {
-    display: none;
-  }
-  #promo-6 {
     grid-column: 4;
     grid-row: 1;
   }
+  #promo-6 {
+    display: none;
+  }
   #promo-7 {
-    grid-column: 3;
-    grid-row: 1;
+    grid-column: 2;
+    grid-row: 3;
+  }
+  #promo-8 {
+    grid-column: 1;
+    grid-row: 3;
+  }
+  #promo-9 {
+    display: none;
   }
 }
 
